# sixnimmt

./: CMakeLists.txt  README.md  build.sh
include/: game.h
src/: bulls_heads_first_agent.cpp  contest.cpp  game.cpp  highest_card_first_agent.cpp  lowest_card_first_agent.cpp  random_agent.cpp  test_game.cpp
